2003-07-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Reinstate window resizing now that the public
	release has been made.

2003-07-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Disabled window resizing for the 2.3.4 release
	because it doesn't quite work right (sorry Steve, didn't get the
	fixes done in time).

2003-06-29  Steve Chaplin   <stevech1097@yahoo.com.au>
 
        * minefield.c (gtk_minefield_randomize): Replace the randomize
	routine with the glib randomize functions. 
	(gtk_minefield_restart): Remove the call to init_random(), clear
	the mines but do not set new mines, leave that to
	gtk_minefield_randomize().
	(init_random): Delete unused function.
	(get_random): Delete unused function.
	(gtk_minefield_draw): Move draw routines to gtk_minefield_expose()
	and remove the function. The draw method is now deprecated, the
	preferred solution is to call gtk_widget_queue_draw() and let
	gtk_<widget>_expose do the drawing.
	(gtk_minefield_lose): Replace gtk_minefield_draw() call with
	gtk_widget_queue_draw().

2003-06-24  Steve Chaplin   <stevech1097@yahoo.com.au>

       * gnomine.c (create_preferences): New function to create preferences
       dialog, but not display it.
       (preferences_callback): Call create_preferences() to create the
       preferences dialog, if it does not already exist.
       (configure_cb): Allow user to manually increase the minesize. It uses
       the preferences spin button to keep the preferences minesize value
       in sync with the real minesize value.
       (main): Make main window resizable.
       (gconf_key_change_cb): Shrink the main window when the minefield
       reduces in size.
       (new_game): Uncommented gtk_widget_show(minefield) because if you
       are playing a game and open preferences - the "Press to resume" 
       button pops up. If you change the field size, the minefield remains
       hidden and is not displayed.