@@ -1,3 +1,9 @@
+2003-07-05  Steve Chaplin  <stevech1097@yahoo.com.au>
+ 
+        * gnomine.c (nstr): Remove and substitute the one line of code
+        directly into save_state().
+        (save_state): Use g_free () instead of free ().
+ 
 2003-07-04  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* gnomine.c (main): Reinstate window resizing now that the public
@@ -5,7 +11,7 @@
 
 2003-07-02  Callum McKenzie  <callum@physics.otago.ac.nz>
 
-	* gnomine.c (main): Disabled window resizing for the 2.3.4 release
+	*. gnomine.c (main): Disabled window resizing for the 2.3.4 release
 	because it doesn't quite work right (sorry Steve, didn't get the
 	fixes done in time).
 
